# CMakeCPPTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  azure-pipelines.yml  vcpkg.json
.devcontainer/: Dockerfile
.devcontainer/gcc-env/: devcontainer.json
.devcontainer/llvm-env/: devcontainer.json
.github/workflows/: ci.yml
.github/workflows/actions/build-test/: action.yml
.github/workflows/actions/install-dependencies/: action.yml
.zed/: debug.json  tasks.json
app/: CMakeLists.txt  main.cpp
cmake/: GenerateCoverage.cmake  GenerateTestReport.cmake  x64-mingw-gcc.cmake  x64-mingw-llvm.cmake
libs/: CMakeLists.txt
libs/math/: CMakeLists.txt
libs/math/lib/: CMakeLists.txt  math_operation.cpp  math_operation.h
libs/math/test/: CMakeLists.txt  math_test.cpp
libs/string/: CMakeLists.txt
libs/string/lib/: CMakeLists.txt  string_operation.cpp  string_operation.h
libs/string/test/: CMakeLists.txt  string_operation_test.cpp
templates/: build-app.yml  build-test.yml
test/: CMakeLists.txt
